Bugfix/set overflow-y to auto and let text area grow to a maximum of two rows

--- a/src/main/webapp/app/exercises/text/assess-new/textblock-feedback-editor/textblock-feedback-editor.component.scss
+++ b/src/main/webapp/app/exercises/text/assess-new/textblock-feedback-editor/textblock-feedback-editor.component.scss
@@ -15,8 +15,9 @@ input.form-control:focus {
 
 textarea {
     resize: none;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+    max-height: 55px;
 }
 
 input {
